# bk-ros

./: .gitignore  stack.xml
bk_configs/: mainpage.dox  manifest.xml
bk_configs/common/nav/: bk_planner_params.yaml  path_checker_params.yaml  sbpl_global_params.yaml
bk_configs/common/vision/: person_tracker_params.yaml  person_tracker_sounds.yaml
bk_configs/harlie/nav/: bk_planner_params.yaml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml
bk_configs/sim/nav/: bk_planner_params.yaml  costmap_local_params.yaml  path_checker_params.yaml  sbpl_global_params.yaml
bk_launch/: data  mainpage.dox  manifest.xml  openni_tracker.launch  openni_tracker.launch~  playback_data.launch  playback_data.launch~  record_data_csv.launch~  track_silhouettes.launch~
bk_launch/bags/: 2012-04-10-15-12-46-moving-around-obstacle-in-hall.bag
bk_launch/launch/: bk_openni_tracker.launch  bk_openni_tracker.launch~  bringup_kinect.launch  bringup_kinect_roberto.launch  harlie_sim.launch  head_controller.launch  kinect_evaluator.launch  kinect_plots.launch  launch_openni~  map_server.launch  motion_tests.launch  openni_tracker.launch  record_data.launch  record_data_bagfile.launch  run_openni.launch  similarity_plots.launch  skeletal_tracker.launch  start_bk_nav.launch  start_bk_nav_harlie.launch  start_precision_steering.launch  stream_data.launch  tf_kinect.launch  track_people.launch  track_silhouettes.launch
bk_launch/maps/: thinkbox.yaml
bk_launch/rviz/: bk_openni_tracker.launch~  harlie-assisted-teleop.vcg  harlie-bk-nav-2.vcg  harlie-bk-nav.vcg  harlie-cwru_nav.vcg  harlie-cwru_sim.vcg  harlie-nav.vcg  sim-bk-nav.vcg  visualize skeletons.vcg
bk_openni_tracker/: CMakeLists.txt  manifest.xml
bk_openni_tracker/src/: bk_openni_tracker.cpp  bk_openni_tracker.cpp~
bk_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
bk_planner/include/bk_planner/: bk_planner.h  bk_planner.h~  path_checker.h
bk_planner/src/: bk_planner.cpp  bk_planner.cpp~  common_data.cpp  covariance_faker.cpp  feeder_thread.cpp  path_checker.cpp  planning_lib.cpp  planning_thread.cpp
bk_sbpl_lattice_planner/: CMakeLists.txt  CMakeLists.txt~  bgp_plugin.xml  bgp_plugin.xml~  manifest.xml  manifest.xml~
bk_sbpl_lattice_planner/include/bk_sbpl_lattice_planner/: bk_sbpl_lattice_planner.h  bk_sbpl_lattice_planner.h~
bk_sbpl_lattice_planner/launch/: move_base_sbpl_fake_localization_2.5cm.launch
bk_sbpl_lattice_planner/launch/move_base/: base_local_planner_params_close.yaml  move_base_sbpl.xml  move_base_sbpl.xml~  nav_view_sbpl.xml  sbpl_global_params.yaml
bk_sbpl_lattice_planner/mprim/: genmprim_unicycle.m  genmprim_unicycle_gentileturns.m  genmprim_unicycle_gentleturns.m  genmprim_unicycleplusbackturn.m  mprim_unic_gentle_1_0.mprim  unicycle.mprim  unicycle_backturn.mprim  unicycle_gentleturns.mprim  unicycle_unicycle.mprim
bk_sbpl_lattice_planner/msg_gen/lisp/: SBPLLatticePlannerStats.lisp  _package.lisp  _package_SBPLLatticePlannerStats.lisp  bk_sbpl_lattice_planner-msg.asd
bk_sbpl_lattice_planner/src/: bk_sbpl_lattice_planner.cpp  bk_sbpl_lattice_planner.cpp~  fn.cpp  make_seg.cpp  test.cpp
bk_skeletal_tracker/: bk_skeletal_tracker.xml  faceme.py  mainpage.dox  manifest.xml
bk_skeletal_tracker/.svn/: all-wcprops  entries
bk_skeletal_tracker/.svn/text-base/: CMakeLists.txt.svn-base  follower.launch.svn-base  manifest.xml.svn-base
bk_skeletal_tracker/include/.svn/: all-wcprops  entries
bk_skeletal_tracker/src/: PersonCal.cpp  PersonCal.h  PersonCharacteristics.cpp  PersonCharacteristics.h  SceneDrawer.cpp  SceneDrawer.h  main.cpp  main.cpp~
bk_skeletal_tracker/src/.svn/: all-wcprops  entries
body_msgs/: mainpage.dox  manifest.xml
body_msgs/msg/: Hand.msg  Hands.msg  Skeleton.msg  Skeletons.msg
body_msgs/msg/.svn/: all-wcprops  entries
body_msgs/src/body_msgs/msg/: _Hand.py  _Hands.py  (+4 more)
geometric_shapes_msgs/msg_gen/lisp/: Shape.lisp  _package.lisp  _package_Shape.lisp  geometric_shapes_msgs-msg.asd
head_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
head_controller/src/: head_driver.cpp  point_head.py
mapping_msgs/msg_gen/lisp/: AttachedCollisionObject.lisp  CollisionMap.lisp  CollisionObject.lisp  CollisionObjectOperation.lisp  OrientedBoundingBox.lisp  PolygonalMap.lisp  _package.lisp  _package_AttachedCollisionObject.lisp  _package_CollisionMap.lisp  _package_CollisionObject.lisp  _package_CollisionObjectOperation.lisp  _package_OrientedBoundingBox.lisp  _package_PolygonalMap.lisp  mapping_msgs-msg.asd
motion_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
motion_tests/src/: kinect_evaluation.cpp  motion_tests.cpp
pcl_decimator/: CMakeLists.txt  manifest.xml
pcl_decimator/cfg/: PCLDecimator.cfg
pcl_decimator/src/: pcl_decimator.cpp
pcl_decimator_bk/: CMakeLists.txt  mainpage.dox
pcl_decimator_bk/cfg/: PCLDecimator.cfgc
pcl_decimator_bk/docs/: PCLDecimatorConfig-usage.dox  PCLDecimatorConfig.dox  PCLDecimatorConfig.wikidoc
pcl_decimator_bk/src/: pcl_decimator.cpp
person_tracker/: CMakeLists.txt  mainpage.dox  manifest.xml
person_tracker/include/person_tracker/: PersonTracker.h
person_tracker/src/: PTSounds.cpp  PersonTracker.cpp  pt_sounds.cpp
portal_sounds/: CMakeLists.txt  mainpage.dox  manifest.xml
portal_sounds/include/portal_sounds/: PTSounds.h
portal_sounds/src/: PTSounds.cpp
segment_lib/: CMakeLists.txt  mainpage.dox  manifest.xml
segment_lib/include/segment_lib/: SegmentVisualizer.h  segment_lib.h
segment_lib/src/: SegmentVisualizer.cpp  create_seg.cpp  interp_seg.cpp  segment_lib.cpp  segment_test.cpp  smooth_path.cpp
(+12 files in other folders)
